--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
-body,p,h5 {
+body,p,h5,h3 {
     margin: 0;
     font-family: 'Roboto', sans-serif;
 }
@@ -19,16 +19,16 @@ header{
 }
 
 .header-item{
-    height: 300px;
-    padding-top: 30px;
-    padding-bottom: 40px;
+    height: 350px;
+    padding-top: 40px;
+    padding-bottom: 60px;
     box-sizing: border-box;
     background-color: rgba(0, 0, 0, 0.6);
 }
 
 .header-item-1{
     box-sizing: border-box;
-    padding: 30px 10px;
+    padding: 40px 10px 60px 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -67,7 +67,8 @@ select {
 }
 
 .date-time-display {
-    margin-left: 25%;
+    /* margin-left: 25%; */
+    text-align: center;
 }
 
 .time-display {
@@ -134,6 +135,10 @@ select {
     width: 100%;
 }
 
+.timeline-item:last-of-type .timeline-bar{
+    border: none;
+}
+
 .timeline-item p {
     margin-bottom: 20px;
     margin-top: 20px;
@@ -152,6 +157,83 @@ select {
 .timeline-number {
     font-weight: 400;
 }
+
+.timeline-icon {
+    height: 1.2em;
+}
+
+.weather-list{
+    background-color: black;
+    margin-top: -46px;
+    border-radius: 46px 46px 0 0;
+}
+
+.navbar {
+    padding: 10px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    box-sizing: border-box;
+}
+
+.nav-title {
+    color: white;
+    font-family: 'Roboto' , sans-serif;
+    font-weight: 200;
+    font-size: 20px;
+    text-align: center;
+}
+
+.nav-container {
+    position: sticky;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    box-sizing: border-box;
+}
+
+.nav-item {
+    padding: 5px;
+}
+
+.nav-item p {
+    color: white;
+}
+
+.nav-item select {
+    height: 25px;
+}
+
+.nav-container .selected {
+    border-bottom: 3px solid #00C0F1;
+}
+
+.nav-icon {
+    width: 1.5em;
+}
+
+option {
+    color: black;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* For mobile phones: */
 [class*="col-"] {
@@ -189,3 +271,9 @@ select {
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
 }
+/* 
+@media only screen and (max-width: 1000px) {
+    .nav-title {
+        left: 40px;
+    }
+} */
